Finalizing openapi and server
