# server/http.py
@@ -1,16 +1,23 @@
 import logging
 import os.path
+import sys
 import threading
+
+import jsonschema
 from flask import Flask, request, Response
 import time
 import json
+
+from jsonschema.exceptions import ValidationError
 from openapi_core import OpenAPI
 from openapi_core.contrib.flask.decorators import FlaskOpenAPIViewDecorator
+import openapi_schema_validator
 import secrets
 
 from lib.authid import AuthID
 from lib.service import Service
 from lib.signverify import Sign, Verify
+from lib.vdp import VDP
 
 app = Flask(__name__)
 openapi = OpenAPI.from_file_path(os.path.dirname(__file__) + "/../config/api.yaml")
@@ -39,13 +46,48 @@ def get_spaces():
 @app.route('/api/vdp', methods=['GET'])
 @openapi_validated
 def get_vdp():
-    return json.loads(Manager.ctrl["cfg"].vdp.get_json())
+    jsn = json.loads(Manager.ctrl["cfg"].vdp.get_json())
+    spc = openapi.spec.contents()
+    resolver = jsonschema.validators.RefResolver.from_schema(spc)
+    validator = openapi_schema_validator.OAS31Validator(spc["components"]["schemas"]["Vdp"], resolver=resolver)
+    try:
+        validator.validate(jsn)
+        return make_response(200, "OK", jsn)
+    except ValidationError as e:
+        return make_response(500, "Bad VDP", {"error": str(e.message)})
+
+
+@app.route('/api/vdp', methods=['POST'])
+#@openapi_validated
+def post_vdp():
+    spc = openapi.spec.contents()
+    resolver = jsonschema.validators.RefResolver.from_schema(spc)
+    validator = openapi_schema_validator.OAS31Validator(spc["components"]["schemas"]["Vdp"], resolver=resolver)
+    if "checkOnly" in request.args and request.args["checkOnly"]:
+        check = True
+    else:
+        check = False
+    try:
+        jsn = json.loads(request.data.decode("utf-8"))
+        validator.validate(jsn)
+        if check:
+            return make_response(200, "OK", jsn)
+        else:
+            vdp = VDP(Manager.ctrl["cfg"], vdpdata=request.data)
+            try:
+                vdp.save()
+            except Exception as e:
+                return make_response(500, "Cannot update VDP", {})
+            return make_response(200, "OK", jsn)
+    except ValidationError as e:
+        return make_response(412, "Bad VDP", { "error": str(e.message) })
+    except Exception as e:
+        return make_response(444, "Bad Request data", {"error": str(e)})
 
 
 @app.route('/api/connect', methods=['POST'])
 @openapi_validated
 def connect():
-    print(request.openapi.body)
     space = Manager.ctrl["cfg"].vdp.get_space(request.openapi.body["spaceid"])
     if not space:
         return make_response(460, "Unknown space")
@@ -53,7 +95,7 @@ def connect():
     if not gate:
         return make_response(461, "Unknown gate")
     if not gate.is_for_space(space.get_id()):
-        return make_response(462, "Gate cannot be used with this space")
+        return make_response(416, "Gate cannot be used with this space")
     if "sessionid" in request.openapi.body:
         data = request.openapi.body
         try:
@@ -102,7 +144,7 @@ class Manager(Service):
     def postinit(cls):
         cls.p = threading.Thread(target=cls.loop)
         cls.p.start()
-        app.run(port=cls.ctrl["cfg"].http_port, debug=False)
+        app.run(port=cls.ctrl["cfg"].http_port, host="0.0.0.0", debug=(cls.ctrl["cfg"].l == "DEBUGa"))
         cls.exit = True
 
     @classmethod
